# ai-agent-study

./: .gitignore  README.md  env.example  main.py  main_front.py  main_server.py  pyproject.toml
rag_collection/: chroma.sqlite3
src/: config.py
src/agents/: agents.py  chatbot.py  chatbot_agent.py  chatbot_graph.py  common.py  llm_model.py  probject_chatbot.py  probject_graph.py  self_rag_agent.py  tmaxsoft_agent.py
src/ai_agent_study.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/schema/: schema.py
src/scripts/: create_po_vector_db.py  create_yeonhee_vector_db.py
src/service/: service.py
test/: test_agents.py  test_chatbot.py
