[project]
name = "ai-agent-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "streamlit>=1.28.0",
    "langchain>=1.2.3",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.2.0",
    "langgraph>=1.0.6",
    "openai>=1.0.0",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.0.0",
]
